slashed #References, WC 7129

--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -110,6 +110,23 @@
   number = {10}
 }
 
+@article{barlowAchievingCommunicatingGlobally2016,
+  title = {Achieving and Communicating Globally Relevant Applied Ecological Research},
+  author = {Barlow, Jos and Cadotte, Marc and Newton, Erika and Pettorelli, Nathalie and Plane, Alice and Stephens, Philip A. and Whittingham, Mark J.},
+  year = {2016},
+  volume = {53},
+  pages = {1--4},
+  issn = {1365-2664},
+  doi = {10.1111/1365-2664.12587},
+  annotation = {\_eprint: https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2664.12587},
+  copyright = {\textcopyright{} 2016 The Authors. Journal of Applied Ecology \textcopyright{} 2016 British Ecological Society},
+  file = {/home/julien/Documents/ZoteroLibrary/Barlow et al_2016_Achieving and communicating globally relevant applied ecological research.pdf},
+  journal = {Journal of Applied Ecology},
+  keywords = {editorial,management},
+  language = {en},
+  number = {1}
+}
+
 @article{barrosSpreadRatesFragmented2016,
   title = {Spread Rates on Fragmented Landscapes: The Interacting Roles of Demography, Dispersal and Habitat Availability},
   author = {Barros, Ceres and Palmer, Stephen C F and Bocedi, Greta and Travis, Justin M J},
@@ -229,7 +246,6 @@
   annotation = {Accepted: 2020-10-30T15:39:50Z},
   file = {/home/julien/Documents/ZoteroLibrary/Brundu et al_2020_Global guidelines for the sustainable use of non-native trees to prevent tree.pdf},
   journal = {Neobiota},
-  keywords = {To read},
   language = {en},
   number = {61}
 }
@@ -669,11 +685,15 @@
   type = {{{METreport}}}
 }
 
-@article{haakenstadNORA10EIRevisedRegional,
+@article{haakenstadNORA10EIRevisedRegional2020,
+  ids = {haakenstadNORA10EIRevisedRegional},
   title = {{{NORA10EI}}: {{A}} Revised Regional Atmosphere-Wave Hindcast for the {{North Sea}}, the {{Norwegian Sea}} and the {{Barents Sea}}},
   shorttitle = {{{NORA10EI}}},
   author = {Haakenstad, Hilde and Breivik, {\O}yvind and Reistad, Magnar and Aarnes, Ole J.},
-  volume = {n/a},
+  year = {2020},
+  month = aug,
+  volume = {40},
+  pages = {4347--4373},
   issn = {1097-0088},
   doi = {10.1002/joc.6458},
   abstract = {NORA10EI, a new atmosphere and wave hindcast for the Norwegian Sea, the North Sea and the Barents Sea is presented. The hindcast uses ERA-Interim as initial and boundary conditions and covers the period 1979\textendash 2017. The earlier NORA10 hindcast used ERA-40 as initial and boundary conditions before September 2002 and operational analyses from the European Centre for Medium-Range Weather Forecasts (ECMWF) in the continuation. This change in initial and boundary conditions may lead to non-stationarities in bias and random errors, and it is a question of some concern whether this also leads to spurious trends. We investigate this by comparing the two hindcasts. We find only minor differences in the statistics of means and upper percentiles, but somewhat larger differences in the extremes (100-year return values) of significant wave height and 10-m winds. Generally, NORA10EI outperforms NORA10 in the ERA-40 period (before September 2002) since ERA-Interim outperforms ERA-40. Conversely, NORA10 outperforms NORA10EI after 2006, since the operational ECMWF analyses here outperform ERA-Interim. Years 2002\textendash 2006 is a transition period with minor differences between the NORA10 and NORA10EI where the resolution of ERA-Interim is lower than that of the ECMWF analyses, but its physics are from a more recent model (2006). An important finding is that the regional hindcasts appear quite insensitive to changes in the host reanalysis with no statistically significant differences in mean and upper percentile trends of wind speed and wave height. A comparison of four polar low cases confirms that using ERA-Interim as host reanalysis yields a slightly better representation of evolution and intensity of polar lows than NORA10 in the ERA-40 period and the opposite after 2006.},
@@ -682,7 +702,7 @@
   journal = {International Journal of Climatology},
   keywords = {climate,wind},
   language = {en},
-  number = {n/a}
+  number = {10}
 }
 
 @techreport{halvorsenNaturNorgeNiN2015,
@@ -695,11 +715,14 @@
   file = {/home/julien/Documents/ZoteroLibrary/Halvorsen et al_2015_Natur i Norge.pdf}
 }
 
-@article{halvorsenSystematicsEcodiversityEcoSyst,
+@article{halvorsenSystematicsEcodiversityEcoSyst2020,
   title = {Towards a Systematics of Ecodiversity: {{The EcoSyst}} Framework},
   shorttitle = {Towards a Systematics of Ecodiversity},
   author = {Halvorsen, Rune and Skarpaas, Olav and Bryn, Anders and Bratli, Harald and Erikstad, Lars and Simensen, Trond and Lieungh, Eva},
-  volume = {n/a},
+  year = {2020},
+  month = nov,
+  volume = {29},
+  pages = {1887--1906},
   issn = {1466-8238},
   doi = {10.1111/geb.13164},
   abstract = {Background Although a standard taxonomy of organisms has existed for nearly 300 years, no consensus has yet been reached on principles for systematization of ecological diversity (i.e., the co-ordinated variation of abiotic and biotic components of natural diversity). In a rapidly changing world, where nature is under constant pressure, standardized terms and methods for characterization of ecological diversity are urgently needed (e.g., to enhance precision and credibility of global change assessments). Aim The aim is to present the EcoSyst framework, a set of general principles and methods for systematization of natural diversity that simultaneously addresses biotic and abiotic variation, and to discuss perspectives opened by this framework. Innovation EcoSyst provides a framework for systematizing natural variation in a consistent manner across different levels of organization. At each ecodiversity level, EcoSyst principles can be used to establish: (a) an extensive attribute system with descriptive variables that cover all relevant sources of variation; (b) a hierarchical-type system; and (c) a set of guidelines for land-cover mapping that is consistent across spatial scales. EcoSyst type systems can be conceptualized as multidimensional models, by which a key characteristic (the response) is related to variation in one or more key sources of variation (predictors). EcoSyst type hierarchies are developed by a gradient-based iterative procedure, by which the ``ecodiversity distance'' (i.e., the extent to which the key characteristic differs between adjacent candidate types) is standardized and the ecological processes behind observed patterns are explicitly taken into account. Application We present ``Nature in Norway'' (NiN), an implementation of the EcoSyst framework for Norway for the ecosystem and landscape levels of ecodiversity. Examples of applications to research and management are given. Conclusion The EcoSyst framework provides a theoretical platform, principles and methods that can complement and enhance initiatives towards a global-scale systematics of ecodiversity.},
@@ -709,7 +732,7 @@
   journal = {Global Ecology and Biogeography},
   keywords = {biodiversity,multivariate,systematics},
   language = {en},
-  number = {n/a}
+  number = {11}
 }
 
 @incollection{harrisSitkaSpruce1990,
@@ -1194,7 +1217,9 @@
   title = {Scientists' Warning on Invasive Alien Species},
   author = {Py{\v s}ek, Petr and Hulme, Philip E. and Simberloff, Dan and Bacher, Sven and Blackburn, Tim M. and Carlton, James T. and Dawson, Wayne and Essl, Franz and Foxcroft, Llewellyn C. and Genovesi, Piero and Jeschke, Jonathan M. and K{\"u}hn, Ingolf and Liebhold, Andrew M. and Mandrak, Nicholas E. and Meyerson, Laura A. and Pauchard, An{\'i}bal and Pergl, Jan and Roy, Helen E. and Seebens, Hanno and van Kleunen, Mark and Vil{\`a}, Montserrat and Wingfield, Michael J. and Richardson, David M.},
   year = {2020},
-  volume = {n/a},
+  month = dec,
+  volume = {95},
+  pages = {1511--1534},
   issn = {1469-185X},
   doi = {10.1111/brv.12627},
   abstract = {Biological invasions are a global consequence of an increasingly connected world and the rise in human population size. The numbers of invasive alien species \textendash{} the subset of alien species that spread widely in areas where they are not native, affecting the environment or human livelihoods \textendash{} are increasing. Synergies with other global changes are exacerbating current invasions and facilitating new ones, thereby escalating the extent and impacts of invaders. Invasions have complex and often immense long-term direct and indirect impacts. In many cases, such impacts become apparent or problematic only when invaders are well established and have large ranges. Invasive alien species break down biogeographic realms, affect native species richness and abundance, increase the risk of native species extinction, affect the genetic composition of native populations, change native animal behaviour, alter phylogenetic diversity across communities, and modify trophic networks. Many invasive alien species also change ecosystem functioning and the delivery of ecosystem services by altering nutrient and contaminant cycling, hydrology, habitat structure, and disturbance regimes. These biodiversity and ecosystem impacts are accelerating and will increase further in the future. Scientific evidence has identified policy strategies to reduce future invasions, but these strategies are often insufficiently implemented. For some nations, notably Australia and New Zealand, biosecurity has become a national priority. There have been long-term successes, such as eradication of rats and cats on increasingly large islands and biological control of weeds across continental areas. However, in many countries, invasions receive little attention. Improved international cooperation is crucial to reduce the impacts of invasive alien species on biodiversity, ecosystem services, and human livelihoods. Countries can strengthen their biosecurity regulations to implement and enforce more effective management strategies that should also address other global changes that interact with invasions.},
@@ -1203,7 +1228,7 @@
   journal = {Biological Reviews},
   keywords = {global change,invasion,management,policy,review},
   language = {en},
-  number = {n/a}
+  number = {6}
 }
 
 @misc{rcoreteamLanguageEnvironmentStatistical2020,
@@ -1595,7 +1620,7 @@
   doi = {10.1111/ecog.04503},
   abstract = {Sets of presence records used to model species' distributions typically consist of observations collected opportunistically rather than systematically. As a result, sampling probability is geographically uneven, which may confound the model's characterization of the species' distribution. Modelers frequently address sampling bias by manipulating training data: either subsampling presence data or creating a similar spatial bias in non-presence background data. We tested a new method, which we call `background thickening', in the latter category. Background thickening entails concentrating background locations around presence locations in proportion to presence location density. We compared background thickening to two established sampling bias correction methods \textendash{} target group background selection and presence thinning \textendash{} using simulated data and data from a case study. In the case study, background thickening and presence thinning performed similarly well, both producing better model discrimination than target group background selection, and better model calibration than models without correction. In the simulation, background thickening performed better than presence thinning when the number of simulated presence locations was low, and vice versa. We discuss drawbacks to target group background selection, why background thickening and presence thinning are conservative but robust sampling bias correction methods, and why background thickening is better than presence thinning for small sample sizes. Particularly, background thickening is advantageous for treating sampling bias when data are scarce because it avoids discarding presence records.},
   copyright = {\textcopyright{} 2019 The Authors},
-  file = {/home/julien/Documents/ZoteroLibrary/Vollering et al_2019_Bunching up the background betters bias in species distribution models.pdf;/home/julien/Zotero/storage/K5ZWVGXD/ecog.html},
+  file = {/home/julien/Documents/ZoteroLibrary/ecog-04503.pdf;/home/julien/Documents/ZoteroLibrary/Vollering et al_2019_Bunching up the background betters bias in species distribution models.pdf;/home/julien/Zotero/storage/K5ZWVGXD/ecog.html},
   journal = {Ecography},
   keywords = {SDM},
   language = {en},
