--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -56,12 +56,12 @@ Likewise, establishment is affected by biotic and abiotic conditions where seeds
 In theory, conditions inhibiting either process may be exploited to suppress wildling spread.
 
 Reducing establishment is of particular interest because it directly regulates wildling abundance (by comparison, reducing dispersal may regulate wildling abundance through negative density dependence). 
-The conditions affecting establishment are also generally easier to manipulate than those affecting dispersal, either directly through intervention or indirectly through site selection [@calvino-cancelaInvasivePotentialEucalyptus2013].
+The conditions affecting establishment are also generally easier to manipulate than those affecting dispersal, either directly through intervention or indirectly through site selection.
 The question, then, becomes: how can we identify establishment-inhibiting conditions in a manner applicable to plantation management?
 
 In Norway --- and similarly in other countries --- there exists a national land mapping classification system that sorts variation in local ecological conditions [@NatureTypesNorway2018].
 It is a working tool for land management in Norway, with government backing.
-The system builds on the continuum concept [@austinContinuumConceptOrdination1985], aiming for reproducible and value-neutral classification of ecosystems by rule-based discretization of species turnover along important environmental gradients [@whittakerGradientAnalysisVegetation1967; @halvorsenNaturNorgeNiN2015].
+The system builds on the continuum concept [@austinContinuumConceptOrdination1985], aiming for reproducible and value-neutral classification of ecosystems by rule-based discretization of species turnover along important environmental gradients [@halvorsenNaturNorgeNiN2015].
 As a result, it encapsulates in its ecosystem types much of the variation that is most likely to regulate wildling germination and survival --- in competition, nutrient availability, disturbance, and the like [@richardsonNaturalizationIntroducedPlants2012].
 It also identifies broad similarities between ecosystem types, which might be used to tease out generic trends in establishment likelihood.
 
@@ -71,7 +71,7 @@ Likewise, an ecosystem type may appear to promote establishment if it tends to c
 Unconfounded establishment likelihoods can then be used to predict how vulnerable the surroundings of an unobserved plantation are, based on its composition of ecosystem types.
   
 Determining which ecosystems are most vulnerable so that interventions can be prioritized objectively is among the most urgent objectives for invasion science [@pysekScientistsWarningInvasive2020].
-Plantations of wind-dispersed, alien conifers present a golden opportunity to assess ecosystem invasibility (to these species, @hegerPredictingBiologicalInvasions2003), because we can estimate ecosystem exposure (seed rain) directly, rather than by proxy [@catfordQuantifyingLevelsBiological2012]. 
+Plantations of wind-dispersed, alien conifers present a golden opportunity to assess ecosystem invasibility (to these species), because we can estimate ecosystem exposure (seed rain) directly, rather than by proxy [@catfordQuantifyingLevelsBiological2012]. 
 We examine plantations in Norway to investigate the following questions:  
 
 1. In which ecosystem types are wildlings of alien conifers most and least likely to establish?  
@@ -84,7 +84,7 @@ We examine plantations in Norway to investigate the following questions:
 
 We observed wildlings and ecosystem types around 82 plantations across Norway, comprising four groups of alien conifers (hereafter: "species"; fig. \@ref(fig:sites-map)).
 The sample contained (1) forty-two sites with Sitka spruce (*Picea sitchensis*) or its fertile hybrid, Lutz spruce (*Picea* x *lutzii*), (2) nineteen with Norway spruce (*Picea abies*), (3) fifteen with undetermined larches (*Larix* spp.), and (4) six with lodgepole pine (*Pinus contorta*).
-Note that the plantations of Norway spruce were located in parts of Norway where it is not considered native [@aarrestadForeignNorwaySpruce2014].
+Note that the plantations of Norway spruce were located in parts of Norway where it is not considered native.
 We selected and delineated plantations manually --- using aerial imagery --- aiming for plantations that were isolated from other plantations of the same species.
 Only plantations with cone-bearing individuals were included in the sample.
 We collected field data from each plantation in one of six field campaigns during the period 2016-2019 [reported in @olsenKartleggingAvKortdistansespredning2016; @appelgrenKartleggingAvKortdistansespredning2017; @kyrkjeeideKartleggingAvKortdistansespredning2017; @appelgrenKartleggingAvKortdistansespredning2018; @olsenKartleggingAvKortdistansespredning2019; @sandvenKartleggingAvKortdistansespredning2019].
@@ -140,10 +140,10 @@ knitr::include_graphics('figures/site-example/site-example.svg')
 
 We used a directed acyclical graph (DAG) to diagram causal relationships among the factors we expected to influence the number of wildlings per cell (fig. \@ref(fig:DAG)).
 In the DAG, the unmeasured, proximate causes of wildling number --- establishment likelihood and seed rain --- are decendants of variables that we could observe or model.
-We included an effect of elevation from plantation on seed rain because neither of our models of seed dispersal capture potential parameter changes induced by uneven terrain [@katulEffectsGentleTopographic2012].
+We included an effect of elevation from plantation on seed rain because neither of our models of seed dispersal account for uneven terrain.
 To estimate the causal influence of ecosystem type on wildlings, the DAG dictated that we adjust for site, climate, elevation from plantation, and relative seed rain in our regression model [@textorRobustCausalInference2016; @mcelreathHauntedDAGCausal2020].
 We did not need to adjust for plantation age (with site in the model), but we included it as a covariate anyway because it could reduce the unexplained variance associated with the random effect of site, and because our assumed causal structure would allow us to interpret its coefficient as an (unconfounded) total effect on wildling number [@westreichTableFallacyPresenting2013].
-Climate entered the regression model as mean annual temperature (Bio1) and precipitation of the coldest quarter (Bio19), at 30-arcsecond resolution, from the CHELSA data product [@kargerClimatologiesHighResolution2017].
+Climate entered the regression model as mean annual temperature (Bio1) and precipitation of the coldest quarter (Bio19), at 30-arcsecond resolution, from CHELSA data [@kargerClimatologiesHighResolution2017].
 We chose these two variables because they showed the strongest correlations with Norwegian vegetation zones and sections [@bakkestuenSteplessModelsRegional2008].
 In the lodgepole pine model we used only Bio19 because the two variables were highly correlated (\rho = 0.98).
 Elevation from plantation was taken with respect to the highest point of the central plantation, from digital elevation models at 1 or 10 m resolution (Norwegian Mapping Authority).
@@ -239,7 +239,7 @@ knitr::include_graphics(here('ms', 'figures', 'establishment-hypotheses.svg'))
 
 In a large database of vegetation plots across Europe, Chytrý et al.[-@chytryHabitatInvasionsAlien2008] found that alien plants as a group are consistently found at low rates in mires and heaths, and high rates in arable, man-made, and coastal ecosystem types.
 The conifer species we examined --- perhaps with the exception of lodgepole pine --- did not conform to these broader trends in ecosystem invasibility.
-Lodgepole pine establishment is relatively well studied, and our results seem consistent with this literature.
+Lodgepole pine establishment is relatively well studied, and our results are consistent with this literature.
 "Bare rock" harbors very few competitors and showed highest lodgepole pine establishment of all ecosystem types [@despainDispersalEcologyLodgepole2001], "coastal heath" (a short shrubland) facilitated more establishment than grassland-like ecosystems [@taylorDriversPlantInvasion2016], all ecosystem types with canopy cover were among those with lowest establishment [@langdonPinusContortaInvasion2010; @taylorDriversPlantInvasion2016], and ecosystem types with high establishment were frequently structured by anthropogenic disturbance [@richardsonPineInvasionsSouthern1994].
 
 It is difficult to evaluate our ecosystem invasibility results against the recruitment patterns that have been described for the three other species.
